force-app/main/default/objects/WinaproachIncidentSettings__c/WinaproachIncidentSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This settings used to manage end points and credentials for Win@proach integration. Create record name as &quot;Default&quot; and enter the required values for it.</description>
    <label>Win@proach Incident Settings</label>
</CustomObject>