force-app/main/default/objects/WinaproachIncidentSettings__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint URL to access Win@proach services through API</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Endpoint URL to access Win@proach services through API</inlineHelpText>
    <label>Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>