force-app/main/default/objects/WinaproachIncidentSettings__c/fields/Integration_Username__c.field-meta.xml
<CustomField>
    <fullName>Integration_Username__c</fullName>
    <description>Salesforce username of the winaproach integration user, we do not need to send the information back to Win@proach because the insert or update came from Win@proach</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Salesforce username of the integration user i.e. winaproach user.  We do not need to send the information back to Win@proach because the insert or update came from Win@proach</inlineHelpText>
    <label>Integration Username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>