force-app/main/default/objects/WinaproachIncidentSettings__c/fields/Max_Count_To_Resend_Failed_Message__c.field-meta.xml
<CustomField>
    <fullName>Max_Count_To_Resend_Failed_Message__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum number of retries for re-sending failed messages.</description>
    <inlineHelpText>Maximum number of retries for re-sending failed messages.</inlineHelpText>
    <label>Max Count To Resend Failed Message</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>