force-app/main/default/objects/WinaproachIncidentSettings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password to access Win@proach services through API</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Password to access Win@proach services through API</inlineHelpText>
    <label>Password</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>