force-app/main/default/objects/WinaproachIncidentSettings__c/fields/Refresh_Interval__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Interval__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The refresh interval in seconds of enhanced list on custom Visualforce page.</description>
    <inlineHelpText>The refresh interval in seconds of enhanced list on custom Visualforce page.</inlineHelpText>
    <label>Refresh Interval (in sec)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>