force-app/main/default/objects/WinaproachIncidentSettings__c/fields/Task_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_Type__c</fullName>
    <description>Task record type for the Win@proach e.g. &quot;Amadeus Parallel Investigation&quot;,  which should be used for Parallel Investigations.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Task record type for the Win@proach e.g. &quot;Amadeus Parallel Investigation&quot;,  which should be used for Parallel Investigations.</inlineHelpText>
    <label>Task Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>