force-app/main/default/objects/WinaproachIncidentSettings__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username to access Win@proach services through API</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Username to access Win@proach services through API</inlineHelpText>
    <label>Username</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>